--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sound Garden</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -20,6 +20,7 @@
             style="background-color: #F8BBD0; color: #fff">
             <div class="text-center">
                 <h1>Adicione um banner maneiro aqui</h1>
+                <p id="modal"></p>
             </div>
         </section>
         <section class="full">
@@ -33,7 +34,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aperiam sunt quo similique,
                         dolorum consectetur inventore ipsam, officiis neque natus eius harum alias quidem. Possimus
                         nobis in inventore tenetur asperiores.</p>
-                    <a href="#" class="btn btn-primary">reservar ingresso</a>
+                    <input type="button" id="abrirmodal" class="btn btn-primary" value="reservar ingresso" onclick=abrirmodal()>
                 </article>
                 <article class="evento card p-5 m-3">
                     <h2>nome do evento - 05/03/2022</h2>
@@ -41,7 +42,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aperiam sunt quo similique,
                         dolorum consectetur inventore ipsam, officiis neque natus eius harum alias quidem. Possimus
                         nobis in inventore tenetur asperiores.</p>
-                    <a href="#" class="btn btn-primary">reservar ingresso</a>
+                    <input type="button" id="abrirmodal" class="btn btn-primary" value="reservar ingresso" onclick=abrirmodal()>
                 </article>
                 <article class="evento card p-5 m-3">
                     <h2>nome do evento - 05/03/2022</h2>
@@ -49,7 +50,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aperiam sunt quo similique,
                         dolorum consectetur inventore ipsam, officiis neque natus eius harum alias quidem. Possimus
                         nobis in inventore tenetur asperiores.</p>
-                    <a href="#" class="btn btn-primary">reservar ingresso</a>
+                    <input type="button" id="abrirmodal" class="btn btn-primary" value="reservar ingresso" onclick=abrirmodal()>
                 </article>
             </div>
             <div class="container text-center">
@@ -85,7 +86,6 @@
                 </div>
             </div>
         </section>
-
     </main>
     <footer>
         <div class="container d-flex justify-content-center align-items-center">
@@ -104,6 +104,15 @@
             </nav>
         </div>
     </footer>
+    <script src="/js/index.js"></script>
+    <section class="modal">
+        <h1>Cadastre-se</h1>
+        <input type="text" placeholder="Digite seu Nome">
+        <br><br>
+        <input type="text" placeholder="Digite seu E-mail">
+        <br><br>
+        <input class="btn btn-primary" type="button" value="Enviar" onclick=enviamodal()>
+        <input class="btn btn-primary" type="button" value="Fechar" onclick=fechamodal()>
+    </section>
 </body>
-
 </html>
