--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <script src="/js/index.js"></script>
     <section class="modal">
         <h1>Cadastre-se</h1>
-        <input type="text" placeholder="Digite seu Nome">
+        <input class="nome" type="text" placeholder="Digite seu Nome">
         <br><br>
-        <input type="text" placeholder="Digite seu E-mail">
+        <input class="email" type="text" placeholder="Digite seu E-mail">
         <br><br>
         <input class="btn btn-primary" type="button" value="Enviar" onclick=enviamodal()>
         <input class="btn btn-primary" type="button" value="Fechar" onclick=fechamodal()>
