--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <br><br>
         <input class="email" type="text" placeholder="Digite seu E-mail">
         <br><br>
-        <input class="btn btn-primary" type="button" value="Enviar" onclick=enviamodal()>
-        <input class="btn btn-primary" type="button" value="Fechar" onclick=fechamodal()>
+        <input class="btn btn-dark" type="button" value="Enviar" onclick=enviamodal()>
+        <input class="btn btn-danger" type="button" value="Fechar" onclick=fechamodal()>
     </section>
 </body>
 </html>
