--- a/cadastro-evento.html
+++ b/cadastro-evento.html
@@ -93,5 +93,5 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
 </body>
-
+    <script src="/js/cadastro-evento.js"></script>
 </html>
